# gismo

./: CMakeLists.txt  README.md  changelog  submodules.txt
.github/: ci-gitlab.yml  ci-inria.yml
.github/workflows/: build_wheels.yml  (+1 more)
cmake/: ctest_script.cmake  gsFetch.cmake
doc/: CMakeLists.txt  C_interface.dox  Doxyfile.in  Examples.dox  Interfaces.dox  Julia_interface.dox  MATLAB_interface.dox  Python_cppyy_interface.dox  Python_pybind11_interface.dox  Tutorial02.dox  Tutorial05.dox  Tutorials.dox  fitting_example.dox  geometry_example.dox  gismodoxy_layout.xml.in  gismodoxy_mainpage.dox  knotVector_example.dox  paraview_example.dox  poisson_example.dox
doc/pygismo/: CMakeLists.txt  Makefile  conf.py  conf.py.in  index.rst  make.bat  pygismo_core.rst  pygismo_hsplines.rst  pygismo_io.rst  pygismo_matrix.rst  pygismo_modelling.rst  pygismo_msplines.rst  pygismo_nurbs.rst  pygismo_pde.rst
examples/: L2projection_example.cpp  bSplineBasis_example.cpp  bSplineCurve_example.cpp  bSplineSurface_example.cpp  basis_example.cpp  fileIo_example.cpp  fitting_errors.cpp  fitting_example.cpp  geometry_example.cpp  gsSampleGridGeometry.cpp  gsSampleScatteredGeometry.cpp  gsTHB_optFitting_fixedBoundary.cpp  kirchhoff-Love_example.cpp  knotVector_example.cpp  paraview_example.cpp  poisson2_example.cpp  quasiInterpolation_example.cpp  scaleTo01.cpp  stokes01-concentration.cpp  stokes03_nonlinear.cpp  stokes_example.cpp  stokes_ieti_example.cpp  stokes_recreation.cpp
python_evaluation/: error_evaluation.py
unittests/: gsExprAssembler_test.cpp  gsL2Projection_test.cpp
(+57 files in other folders)
